--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
-language: erlang
+language: elixir
+elixir:
+  - 1.0.0
+  - 1.0.1
+  - 1.0.2
+  - 1.0.3
 otp_release:
   - 17.1
-before_install:
-  - wget http://s3.hex.pm/builds/elixir/v1.0.0.zip
-  - unzip -d elixir v1.0.0.zip
-before_script:
-  - export PATH=`pwd`/elixir/bin:$PATH
-  - mix local.hex --force
-  - mix deps.get --only test
-script: mix test
 after_script:
   - mix deps.get
   - mix inch.report
