--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
+sudo: false
 language: elixir
 elixir:
-  - 1.0.0
-  - 1.0.1
-  - 1.0.2
-  - 1.0.3
+  - 1.1.1
+  - 1.2.6
+  - 1.3.4
 otp_release:
-  - 17.4
+  - 18.2
+  - 19.0
 after_script:
-  - mix deps.get
-  - mix inch.report
+  - MIX_ENV=test mix inch.report
+matrix:
+  exclude:
+  - elixir: 1.1.1
+    otp_release: 19.0
