--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -44,4 +44,5 @@ jobs:
       - run: mix deps.get
       - run: mix deps.compile
       - run: mix compile --warnings-as-errors
+      - run: mix inch
       - run: mix test
