--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -46,3 +46,4 @@ jobs:
       - run: mix compile --warnings-as-errors
       - run: mix inch
       - run: mix test
+      - run: bash test/run_integration_test.sh
